--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "architectui-react-pro",
+  "name": "vigalab",
   "version": "1.5.0",
   "private": true,
-  "description": "ArchitectUI - Bootstrap 4 Premium Admin Dashboard Template",
-  "author": "DashboardPack.com",
-  "homepage": "http://cial.vigalab.com",
+  "description": "vigalab vibots",
+  "author": "vigalab.com",
+  "homepage": "https://localhost",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dpackdev/architectui-react-pro"
+    "url": "git+https://github.com/eduardoh89/vigafab"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "animate-sass": "^0.8.2",
     "apexcharts": "^3.20.0",
     "availity-reactstrap-validation": "^2.6.0",
@@ -37,6 +38,7 @@
     "jw-react-pagination": "^1.1.0",
     "loaders.css": "^0.1.2",
     "m-react-splitters": "^1.2.0",
+    "md5": "^2.3.0",
     "moment": "^2.24.0",
     "namor": "^1.1.2",
     "pe7-icon": "^1.0.4",
