Ultimos cambios pruebas gauge

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-chat-elements": "^10.7.1",
     "react-circle": "^1.1.1",
     "react-ckeditor-component": "^1.1.0",
+    "react-coffee-gauge": "^1.3.0",
     "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-countup": "^4.2.2",
@@ -77,6 +78,7 @@
     "react-filterable-table": "^0.3.434",
     "react-flag-icon-css": "^1.0.25",
     "react-flagkit": "^1.0.2",
+    "react-gauge-chart": "^0.2.5",
     "react-getscreen": "^1.1.3",
     "react-google-maps": "^9.4.5",
     "react-hamburgers": "^1.0.0",
