--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^16.9.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-dropzone": "^10.1.9",
+    "react-excel-renderer": "^1.1.0",
     "react-filterable-table": "^0.3.434",
     "react-flag-icon-css": "^1.0.25",
     "react-flagkit": "^1.0.2",
