--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.8.4",
     "dropzone": "^5.5.1",
+    "fullscreen-react": "^1.0.4",
     "google-map-react": "^1.1.5",
     "hamburgers": "^1.1.3",
     "html-to-draftjs": "^1.4.0",
