--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-filterable-table": "^0.3.434",
     "react-flag-icon-css": "^1.0.25",
     "react-flagkit": "^1.0.2",
+    "react-full-screen": "^0.3.2-0",
     "react-gauge-chart": "^0.2.5",
     "react-getscreen": "^1.1.3",
     "react-google-maps": "^9.4.5",
