--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-dropzone": "^10.1.9",
     "react-excel-renderer": "^1.1.0",
+    "react-excel-workbook": "^0.0.4",
     "react-filterable-table": "^0.3.434",
     "react-flag-icon-css": "^1.0.25",
     "react-flagkit": "^1.0.2",
