--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@react-pdf/renderer": "^1.6.13",
     "animate-sass": "^0.8.2",
     "apexcharts": "^3.23.1",
     "availity-reactstrap-validation": "^2.6.0",
