--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-getscreen": "^1.1.3",
     "react-google-maps": "^9.4.5",
     "react-hamburgers": "^1.0.0",
+    "react-html2pdf": "^1.0.1",
     "react-icons": "^3.7.0",
     "react-image-cropper": "^1.3.0",
     "react-input-mask": "^2.0.4",
