--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@react-pdf/renderer": "^1.6.13",
     "animate-sass": "^0.8.2",
-    "apexcharts": "^3.23.1",
+    "apexcharts": "^3.26.0",
     "availity-reactstrap-validation": "^2.6.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
@@ -37,6 +37,8 @@
     "google-map-react": "^1.1.5",
     "hamburgers": "^1.1.3",
     "html-to-draftjs": "^1.4.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "jw-react-pagination": "^1.1.0",
     "loaders.css": "^0.1.2",
     "m-react-splitters": "^1.2.0",
