--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "namor": "^1.1.2",
+    "pareto-chart": "^1.0.22",
     "pe7-icon": "^1.0.4",
     "rc-slider": "^8.7.1",
     "rc-tabs": "^9.6.7",
